--- a/angular.json
+++ b/angular.json
@@ -62,6 +62,10 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "KRCQApp:build",
+            "hmr": true
+          },
           "configurations": {
             "production": {
               "browserTarget": "KRCQApp:build:production"
